// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render 1`] = `
<SearchBar>
  <ReactFinalForm
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Box
        maxWidth="739px"
        width="100%"
      >
        <div
          className="root"
          style={
            Object {
              "maxWidth": "739px",
              "width": "100%",
            }
          }
        >
          <Field
            name="search"
            validate={[Function]}
          >
            <Input
              name="search"
              onChange={[Function]}
              placeholder="Search"
              value=""
            >
              <input
                className="root"
                name="search"
                onChange={[Function]}
                placeholder="Search"
                type="text"
                value=""
              />
            </Input>
          </Field>
          <Box>
            <div
              className="root"
              style={Object {}}
            >
              <Button
                type="submit"
              >
                <button
                  className="root"
                  type="submit"
                >
                  Search
                </button>
              </Button>
            </div>
          </Box>
        </div>
      </Box>
    </form>
  </ReactFinalForm>
</SearchBar>
`;

exports[`SearchBar should submit the Form 1`] = `
<SearchBar>
  <ReactFinalForm
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Box
        maxWidth="739px"
        width="100%"
      >
        <div
          className="root"
          style={
            Object {
              "maxWidth": "739px",
              "width": "100%",
            }
          }
        >
          <Field
            name="search"
            validate={[Function]}
          >
            <Input
              name="search"
              onChange={[Function]}
              placeholder="Search"
              value="query"
            >
              <input
                className="root"
                name="search"
                onChange={[Function]}
                placeholder="Search"
                type="text"
                value="query"
              />
            </Input>
          </Field>
          <Box>
            <div
              className="root"
              style={Object {}}
            >
              <Button
                type="submit"
              >
                <button
                  className="root"
                  type="submit"
                >
                  Search
                </button>
              </Button>
            </div>
          </Box>
        </div>
      </Box>
    </form>
  </ReactFinalForm>
</SearchBar>
`;
